Add new template

--- a/inst/rmarkdown/templates/GSS-descriptives-1-spence/skeleton/skeleton.rmd
+++ b/inst/rmarkdown/templates/GSS-descriptives-1-spence/skeleton/skeleton.rmd
@@ -4,7 +4,7 @@ output: pdf_document
 ---
 
 
- 
+
 ```{r, echo=FALSE, message=FALSE}
 # Load your libraries here
 library(aws.s3)
@@ -39,7 +39,7 @@ summary(GSS$age)
 ````
 *CHOOSE ONE OF THE VARIABLES IN THE CHUNK ABOVE AND INDICATE WHICH VALUE IS THE MOST COMMON (I.E., THE MODE).
 
-THERE ARE OFTEN MANY DIFFERENT WAYS TO CODE THE SAME THING IN R, BUT DEPENDING ON THE CODE THAT YOU WRITE, YOU MAY GET THE INFORMATION IN A DIFFERENT WAY. 
+THERE ARE OFTEN MANY DIFFERENT WAYS TO CODE THE SAME THING IN R, BUT DEPENDING ON THE CODE THAT YOU WRITE, YOU MAY GET THE INFORMATION IN A DIFFERENT WAY.
 *QUESTION: WHAT ARE DIFFERENCES THAT YOU SEE BETWEEN THE TWO SETS OF CODE ABOVE?
 
 *QUESTION: WHY DID SUMMARY GIVE YOU VERY DIFFERENT INFORMATION FOR CHILDS AND AGE THAT YOU DIDN'T GET FOR SEX AND HEALTH?
@@ -59,6 +59,7 @@ crosstab(GSS, row.vars = "youngadult")
 
 #[CHANGE THIS TEXT TO A NOTE WHERE YOU DESCRIBE WHAT THE LINE OF CODE BELOW DOES]
 crosstab(GSS, row.vars = "nochild", col.vars = "youngadult")
+crosstab(GSS, row.vars = "nochild", col.vars = "youngadult", type = "c")
 ````
 
 *WRITE A SENTENCE INTERPRETING THE RESULT FROM CROSSTAB OF NOCHILD.
