--- a/vignettes/lehmansociology.Rmd
+++ b/vignettes/lehmansociology.Rmd
@@ -14,7 +14,7 @@ Quantitative Analysis of Sociological Data at Lehman College.
 
 In this package we are mainly relying on base r plus the family of somewhat related
 packages that includes ggplot2, knitr, dplyr, broom, and printr. We also use a few other
-packages such as Googlesheets for reading data, xtable for nice tables and maps for 
+packages such as Googlesheets for reading data, printr and xtable for nice tables and maps for 
 creating maps. 
 
 Our goal is to be as simple as we can but not too simple.  We choose these packages rather
@@ -27,5 +27,5 @@ The vignettes are going to show some important examples of how to use this packa
 [Univariate Statistics](http:univariatestatistics)  
 [Regression](http:regressionanalysis)  
 [Making Tables](makingtables)  
-
+[Using Frequency()](http:using_frequency)
 
